
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int bzero (char*,int) ;
 int free (char*) ;
 char* malloc (int) ;
 char* root ;
 int strlen (char*) ;
 int strncat (char*,char*,int) ;
 int write (int,char*,int) ;

int do_root(int s)
{
char* str = malloc(5000);

        bzero(str, 5000);
strncat(str, "Root ", 5);
strncat(str, root, strlen(root));
strncat(str, "\n", 1);
write(s, str, strlen(str));
free(str);

return 0;
}
